style.css
@charset "UTF-8";
html {
  font-size: 62.5%;
}

body {
  font-family: "Lato", Verdana, sans-serif;
}

h2 {
  font-size: 3rem;
  font-style: normal;
  font-weight: 900;
  line-height: 4.8rem;
}

h4 {
  font-size: 1.8rem;
  font-style: normal;
  font-weight: 900;
  line-height: 1.8rem;
  color: #666d89;
}

a {
  outline: none;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.header__wrapper {
  display: flex;
  color: #ffffff;
  justify-content: space-between;
  align-items: center;
  background-color: #2d303a;
  border-bottom: 6px solid #323746;
  padding: 0 4rem;
}

.header__title {
  font-size: 2.5rem;
  line-height: 3rem;
  font-family: "Lato";
  font-weight: 700;
  letter-spacing: -0.07rem;
  padding: 29px 0 30px;
  min-width: 116px;
}

.header__title-star {
  margin-left: -0.6rem;
  color: #f06c64;
}

.header__list {
  padding-top: 10px;
}

.header__list-item {
  list-style: none;
  display: inline;
  font-size: 1.2rem;
  font-family: "Lato";
}

.header__list-item:before {
  content: " ·";
  color: #666d89;
  margin-left: 10px;
  margin-right: 13px;
}

.header__list-item:first-child:before {
  content: none;
}

.header__list-link {
  color: #ffffff;
}

.header__list-link:hover {
  text-decoration: underline;
}

.header__list-link-selected {
  color: #f06c64;
}

.wrapper {
  max-width: 1020px;
  margin: auto;
  padding: 0 4rem;
}

.layout-2-columns {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.layout-2-columns * > {
  flex-basis: 45%;
}

.layout-3-columns {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.layout-3-columns * > {
  flex-basis: 30%;
}

.layout-4-columns {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.layout-4-columns * > {
  flex-basis: 21%;
}
.layout-4-columns > * {
  margin-bottom: 20px;
}

.footer__wrapper {
  display: flex;
  justify-content: space-between;
  background-color: #2d303a;
}
.footer__copyright {
  color: #666d89;
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.2rem;
  padding-top: 27px;
}
.footer__contacts {
  padding: 22px 0;
}

.slider__wrapper {
  display: flex;
  justify-content: center;
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b;
  position: relative;
}

.slider__left-arrow {
  position: absolute;
  cursor: pointer;
  transform: translateY(-50%);
  opacity: 20%;
  top: 50%;
  left: 4%;
}

.slider__left-arrow:hover {
  opacity: 100%;
}

.slider__right-arrow {
  position: absolute;
  cursor: pointer;
  transform: translateY(-50%);
  opacity: 20%;
  top: 50%;
  right: 4%;
}

.slider__right-arrow:hover {
  opacity: 100%;
}

.slider__slide {
  display: flex;
  justify-content: space-between;
  min-width: 800px;
}

.slider__slide-vertical-mobile {
  padding-top: 6.9%;
  padding-bottom: 7.2%;
  position: relative;
}

.slider__slide-horizontal-mobile {
  position: relative;
  padding-top: 22%;
}

.slide__vertical-mobile-body {
  width: 100%;
  height: auto;
  max-width: 240px;
}

.slide__vertical-mobile-content {
  cursor: pointer;
  position: absolute;
  border: 3px solid #c7c8c7;
  background-image: url("assets/images/Vertical-Image.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 194px;
  height: 339px;
  top: 115px;
  left: 13px;
}

.slide__vertical-mobile-content:hover {
  border: 3px solid #aaaaaa;
}

.slide__horizontal-mobile-body {
  width: 100%;
  max-width: 482px;
  height: auto;
}

.slide__horizontal-mobile-content {
  cursor: pointer;
  position: absolute;
  border: 3px solid #c7c8c7;
  background-image: url("assets/images/Horizontal-Image.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 194px;
  width: 339px;
  top: 185px;
  left: 54px;
}

.slide__horizontal-mobile-content:hover {
  border: 3px solid #aaaaaa;
}

.services__wrapper {
  background-color: #f2f2f2;
  border-bottom: 6px solid #ffffff;
}

.services__description {
  padding: 46px 0 47px 0;
  min-width: 944px;
}

.services__description-header {
  padding-bottom: 5px;
  font-size: 3rem;
  line-height: 6.2rem;
  color: #666d89;
  font-family: "Lato";
  font-weight: 900;
}

.services__description-text {
  line-height: 3rem;
  font-size: 1.8rem;
  color: #767e9e;
  font-family: "Lato";
  font-weight: 300;
}

.services__list {
  display: flex;
  flex-wrap: wrap;
  min-width: 970px;
  padding-bottom: 32px;
}

.services__item {
  display: flex;
  margin-bottom: 29px;
  width: 33%;
}

.services__item-icon {
  width: 60px;
  height: 60px;
}

.services__item-content {
  display: flex;
  flex-direction: column;
  max-width: 240px;
  overflow: hidden;
  padding-left: 2rem;
}

.services__item-header {
  font-size: 1.8rem;
  line-height: 1.8rem;
  color: #666d89;
  font-family: "Lato";
  font-weight: 900;
}

.services__item-text {
  font-size: 1.2rem;
  line-height: 2.2rem;
  padding-top: 8px;
  color: #767e9e;
  font-family: "Lato";
  font-weight: 400;
  text-align: justify;
}

.about-us__wrapper {
  background: #f2f2f2;
  border-bottom: 6px solid #fff;
}

.about-us__title {
  color: #666d89;
  margin-top: 53px;
  letter-spacing: -0.02rem;
  margin-left: 1px;
  display: inline-block;
}

.about-us__description {
  margin-top: 12px;
  margin-bottom: 44px;
  font-size: 1.8rem;
  font-style: normal;
  font-weight: 300;
  line-height: 3rem;
  color: #767e9e;
  letter-spacing: -0.0207rem;
}

.employee {
  max-width: 301px;
}

.employee:not(:last-child) > .employee__image {
  margin-left: -2px;
}

.employee__title {
  margin-top: 13px;
  margin-bottom: 10px;
}

.employee__description {
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.2rem;
  color: #767e9e;
  min-width: 309px;
}

.employee__contacts {
  margin-top: 22px;
  margin-bottom: 67px;
}

.portfolio__images:nth-child(n+13) {
  display: none;
}

.portfolio__wrapper {
  background: #2d303a;
  border-bottom: 6px solid #323746;
}

.portfolio__title {
  display: inline-block;
  color: #666d89;
  letter-spacing: 0.029rem;
  margin-top: 54px;
  margin-bottom: 12px;
}

.portfolio__description {
  font-size: 1.8rem;
  font-style: normal;
  font-weight: 300;
  line-height: 3rem;
  color: #767e9e;
  letter-spacing: -0.021rem;
}

.portfolio__tags {
  margin-top: 11px;
  margin-bottom: 19px;
}

.portfolio__images {
  padding-bottom: 46px;
}

.portfolio__image {
  cursor: pointer;
}

.tags {
  display: flex;
}

.tag {
  cursor: pointer;
  padding: 0 0.7rem;
  letter-spacing: 0.01rem;
  color: #767e9e;
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2rem;
}

.tag:hover {
  background-color: #323746;
}

.tag:nth-child(1) {
  margin-right: 10px;
  margin-left: 1px;
}

.tag:nth-child(2) {
  margin-right: 9px;
  padding: 0 5px;
}

.tag:nth-child(3) {
  margin-right: 10px;
  padding-right: 4px;
}

.tag:nth-child(4) {
  padding: 0 6px;
}

.tag-bordered {
  border-radius: 5px;
  border: 1px solid #666d89;
}

.tag-selected {
  color: #dedede;
  border-color: #dedede;
}

.links-icons {
  display: flex;
}

.ico {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  border: 1px solid #666d89;
}

.ico:last-child {
  margin-right: 0;
}

.ico-object {
  width: 16px;
  height: 16px;
}

.ico-svg:hover .shp0 {
  fill: #000000;
}

.get-quote__wrapper {
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b;
}
.get-quote__title {
  color: #f0d8d9;
  display: inline-block;
  margin-top: 53px;
  margin-bottom: 12px;
  letter-spacing: -0.02rem;
}
.get-quote__description {
  color: #f0c2c1;
  font-size: 1.8rem;
  font-style: normal;
  font-weight: 300;
  line-height: 3rem;
  letter-spacing: -0.004rem;
}
.get-quote__form-block {
  display: flex;
  justify-content: space-between;
  margin-top: 44px;
}
.get-quote__form {
  max-width: 619px;
}
.get-quote__form input, .get-quote__form textarea {
  border: 1px solid #d6564f;
  background-color: #d6564f;
  border-radius: 5px;
  width: 100%;
}
.get-quote__form input::placeholder, .get-quote__form textarea::placeholder {
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.2rem;
  color: #f48c8f;
}
.get-quote__form input:focus, .get-quote__form textarea:focus {
  outline: none;
  border: 1px solid #f0c2c1;
  transform: translate(-2px);
}
.get-quote__form textarea {
  resize: none;
  height: 200px;
}
.get-quote__input {
  margin-bottom: 15px;
  padding: 11px 15px;
}
.get-quote__textarea {
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.2rem;
  padding: 7px 16px;
  letter-spacing: -0.24rem;
}
.get-quote__content {
  max-width: 300px;
}
.get-quote__content-title {
  color: #f0c2c1;
}
.get-quote__content-description {
  color: #f0c2c1;
  min-width: 303px;
  letter-spacing: -0.02rem;
  margin-top: 10px;
  margin-bottom: 20px;
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.2rem;
}

.qet-quote__button-block {
  display: flex;
  justify-content: flex-end;
}
.qet-quote__button {
  border: none;
  margin: 18px 0;
  background-color: #f0d8d9;
  color: #666d89;
  border-radius: 5px;
  cursor: pointer;
  font-size: 2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 3rem;
}
.qet-quote__button:hover {
  background-color: #f0c2c1;
}

.contacts {
  color: #f0c2c1;
}
.contacts__item {
  display: flex;
  align-items: center;
}
.contacts__item:hover .contacts__icon-locate {
  background-image: url(./assets/images/singolo3/icons/locate-black.svg);
}
.contacts__item:hover .contacts__icon-telephone {
  background-image: url(./assets/images/singolo3/icons/telephone-black.svg);
}
.contacts__item:hover .contacts__icon-mail {
  background-image: url(./assets/images/singolo3/icons/mail-black.svg);
}
.contacts__description {
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 400;
  line-height: 2.1rem;
  color: #f0c2c1;
}
.contacts__description:hover {
  color: #d6564f;
}
.contacts__icon {
  background-size: contain;
  background-repeat: no-repeat;
}
.contacts__icon-locate {
  background-image: url(./assets/images/singolo3/icons/locate-white.svg);
  height: 12px;
  width: 7px;
  margin-left: 3px;
  margin-right: 14px;
}
.contacts__icon-telephone {
  background-image: url(./assets/images/singolo3/icons/telephone-white.svg);
  height: 12px;
  width: 11px;
  margin-left: 1px;
  margin-right: 11px;
}
.contacts__icon-mail {
  background-image: url(./assets/images/singolo3/icons/mail-white.svg);
  height: 14px;
  width: 14px;
  margin-top: 8px;
  margin-right: 9px;
}

/*# sourceMappingURL=style.css.map */

